<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.agdturner</groupId>
    <artifactId>agdt-java-geotools</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>agdt-java-geotools</name>
    <url>https://github.com/agdturner/agdt-java-geotools</url>
    <description>A Java Library to works with GeoTools.</description>
    <scm>
        <url>git@github.com:agdturner/agdt-java-geotools.git</url>
        <connection>scm:git:git@github.com:agdturner/agdt-java-geotools.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/agdt-java-geotools</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <organization>
        <name>Centre for Computational Geography, University of Leeds</name>
        <url>http://www.ccg.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>Centre for Computational Geography, University of Leeds</organization>
            <organizationUrl>http://www.ccg.leeds.ac.uk</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jts.version>1.13</jts.version>
        <!--
        <jts.version>1.14.0</jts.version>
        <jts.version>1.12</jts.version>
        -->
        <geotools.version>22.3</geotools.version>
        <!--
        <geotools.version>21.4</geotools.version>
        <geotools.version>21.3</geotools.version>
        <geotools.version>22.2</geotools.version>
        <geotools.version>20.2</geotools.version>
        <geotools.version>18.0</geotools.version>
        <geotools.version>13.2</geotools.version>
        <geotools.version>13-SNAPSHOT</geotools.version>
        -->
        <agdt-java-generic.version>1.2-SNAPSHOT</agdt-java-generic.version>
        <agdt-java-grids.version>1.0-SNAPSHOT</agdt-java-grids.version>
        <agdt-java-vector.version>1.0-SNAPSHOT</agdt-java-vector.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/it.geosolutions.imageio-ext/imageio-ext-gdalframework -->
        <!--
        <dependency>
            <groupId>it.geosolutions.imageio-ext</groupId>
            <artifactId>imageio-ext-gdalframework</artifactId>
            <version>1.1.17</version>
        </dependency>
        -->
        <!-- https://mvnrepository.com/artifact/it.geosolutions.imageio-ext/imageio-ext-utilities -->
        <!--
        <dependency>
            <groupId>it.geosolutions.imageio-ext</groupId>
            <artifactId>imageio-ext-utilities</artifactId>
            <version>1.1.17</version>
        </dependency>
        -->
        <!-- https://mvnrepository.com/artifact/it.geosolutions.imageio-ext/imageio-ext-gdal -->
        <!--
        <dependency>
            <groupId>it.geosolutions.imageio-ext</groupId>
            <artifactId>imageio-ext-gdal</artifactId>
            <version>1.0.1</version>
        </dependency>
        -->
        
        <dependency>
            <groupId>com.vividsolutions</groupId>
            <artifactId>jts</artifactId>
            <version>${jts.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>${geotools.version}</version>
        </dependency>   
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-swing</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-brewer</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geotiff</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-image</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-coverage</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-imageio-ext-gdal</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <!--
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-ogr-jni</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-arcgrid</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>agdt-java-generic</artifactId>
            <version>${agdt-java-generic.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>agdt-java-grids</artifactId>
            <version>${agdt-java-grids.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>agdt-java-vector</artifactId>
            <version>${agdt-java-vector.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
    </dependencies>
    
    <repositories>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
        </repository>
        <repository> <!--Add the snapshot repository here-->
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>opengeo</id>
            <name>OpenGeo Maven Repository</name>
            <url>http://repo.opengeo.org</url>
        </repository>
    </repositories>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                </configuration>
                <!--
                <version>2.22.2</version>
                -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M4</version>
                <!--
                <version>2.22.2</version>
                -->
            </plugin>
        </plugins>
    </build>
            
    <profiles>
        <profile> 
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>          
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <compilerArgs>
                                <arg>-verbose</arg>
                                <arg>-Xlint:all,-options,-path</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M4</version>
                        <configuration>
                            <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                        </configuration>
                        <!--
                        <version>2.22.2</version>
                        -->
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>3.0.0-M4</version>
                        <!--
                        <version>2.22.2</version>
                        -->
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <!--
        <repository>
            <id>internal</id>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
        -->
    </distributionManagement>
</project>
